// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activeRepeatStyles returns primary if repeat 1`] = `
Object {
  "color": "rgba(255,255,255,1)",
}
`;

exports[`activeRepeatStyles returns tertiary if not repeat 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`activeShuffleStyles returns primary if shuffle 1`] = `
Object {
  "color": "rgba(255,255,255,1)",
}
`;

exports[`activeShuffleStyles returns tertiary if not shuffle 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`backClasses matches defaults 1`] = `"soft-sides flush text-light-secondary h3 icon-skip-back"`;

exports[`getPrimaryTextColor returns different versions for light and dark 1`] = `
Object {
  "color": "rgba(255,255,255,1)",
}
`;

exports[`getPrimaryTextColor returns different versions for light and dark 2`] = `
Object {
  "color": "rgba(0,0,0,1)",
}
`;

exports[`getTertiaryTextColor returns different versions for light and dark 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`getTertiaryTextColor returns different versions for light and dark 2`] = `
Object {
  "color": "rgba(0,0,0,.5)",
}
`;

exports[`nextClasses matches defaults 1`] = `"soft-sides flush text-light-secondary h3 icon-skip-next"`;

exports[`renders dock version 1`] = `
<button
  className="plain float-right"
  onClick={[Function]}
>
  <i
    className="text-center h4 icon-play text-light-primary"
  />
</button>
`;

exports[`renders with props 1`] = `
<div
  className="floating audio-controls"
>
  <button
    className="plain floating__item"
    onClick={[Function]}
  >
    <i
      className="soft-sides flush text-light-secondary h3 icon-skip-back"
    />
  </button>
  <button
    className="plain floating__item"
    onClick={[Function]}
  >
    <i
      className="soft-sides flush text-light-primary h1 icon-play"
      style={
        Object {
          "left": "6px",
          "position": "relative",
        }
      }
    />
  </button>
  <button
    className="plain floating__item"
    onClick={[Function]}
  >
    <i
      className="soft-sides flush text-light-secondary h3 icon-skip-next"
    />
  </button>
  <Connect(AudioScrubberWithoutData)
    isLight={false}
  />
  <div
    className="grid one-whole flush"
    style={
      Object {
        "maxHeight": "30px",
      }
    }
  >
    <div
      className="grid__item one-third text-left hard"
    >
      <button
        className="plain floating__item"
        onClick={[Function]}
      >
        <i
          className="soft-half-right flush h5 icon-shuffle"
          style={
            Object {
              "color": "rgba(255,255,255,.5)",
            }
          }
        />
      </button>
    </div>
    <div
      className="grid__item one-third hard-ends hard"
    >
      <button
        className="plain floating__item"
        onClick={[Function]}
      >
        <i
          className="flush h5 icon-repeat"
          style={
            Object {
              "color": "rgba(255,255,255,.5)",
            }
          }
        />
      </button>
    </div>
    <div
      className="grid__item one-third text-right hard-sides"
    >
      <h5
        onClick={[Function]}
        style={
          Object {
            "color": "rgba(255,255,255,.5)",
          }
        }
      >
        •••
      </h5>
    </div>
    <i
      className="text-light-primary h3 push-double-left soft-left"
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
          "top": "-38px",
        }
      }
    />
  </div>
</div>
`;

exports[`repeatClasses returns defaults 1`] = `"flush h5 icon-repeat"`;

exports[`repeatIcon returns default icon 1`] = `
<i
  className="text-light-primary h3 push-double-left soft-left"
  onClick={[Function]}
  style={
    Object {
      "position": "relative",
      "top": "-38px",
    }
  }
/>
`;

exports[`repeatIcon returns repeat icon 1`] = `
<i
  className="text-light-primary h3 push-double-left soft-left icon-repeat-all"
  onClick={[Function]}
  style={
    Object {
      "position": "relative",
      "top": "-38px",
    }
  }
/>
`;

exports[`repeatIcon returns repeat one icon 1`] = `
<i
  className="text-light-primary h3 push-double-left soft-left icon-repeat-one"
  onClick={[Function]}
  style={
    Object {
      "position": "relative",
      "top": "-38px",
    }
  }
/>
`;

exports[`repeatIconStyles returns defaults 1`] = `
Object {
  "position": "relative",
  "top": "-38px",
}
`;

exports[`showControls returns if not series 1`] = `
<div
  className="grid one-whole flush"
  style={
    Object {
      "maxHeight": "30px",
    }
  }
>
  <div
    className="grid__item one-third text-left hard"
  >
    <button
      className="plain floating__item"
      onClick={[Function]}
    >
      <i
        className="soft-half-right flush h5 icon-shuffle"
        style={
          Object {
            "color": "rgba(255,255,255,.5)",
          }
        }
      />
    </button>
  </div>
  <div
    className="grid__item one-third hard-ends hard"
  >
    <button
      className="plain floating__item"
      onClick={[Function]}
    >
      <i
        className="flush h5 icon-repeat"
        style={
          Object {
            "color": "rgba(255,255,255,.5)",
          }
        }
      />
    </button>
  </div>
  <div
    className="grid__item one-third text-right hard-sides"
  >
    <h5
      onClick={[Function]}
      style={
        Object {
          "color": "rgba(255,255,255,.5)",
        }
      }
    >
      •••
    </h5>
  </div>
  <i
    className="text-light-primary h3 push-double-left soft-left"
    onClick={[Function]}
    style={
      Object {
        "position": "relative",
        "top": "-38px",
      }
    }
  />
</div>
`;

exports[`shuffleClasses returns defaults 1`] = `"soft-half-right flush h5 icon-shuffle"`;

exports[`test activeRepeatStyles returns primary if repeat 1`] = `
Object {
  "color": "rgba(255,255,255,1)",
}
`;

exports[`test activeRepeatStyles returns tertiary if not repeat 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`test activeShuffleStyles returns primary if shuffle 1`] = `
Object {
  "color": "rgba(255,255,255,1)",
}
`;

exports[`test activeShuffleStyles returns tertiary if not shuffle 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`test backClasses matches defaults 1`] = `"soft-sides flush text-light-secondary h3 icon-skip-back"`;

exports[`test getPrimaryTextColor returns different versions for light and dark 1`] = `
Object {
  "color": "rgba(255,255,255,1)",
}
`;

exports[`test getPrimaryTextColor returns different versions for light and dark 2`] = `
Object {
  "color": "rgba(0,0,0,1)",
}
`;

exports[`test getTertiaryTextColor returns different versions for light and dark 1`] = `
Object {
  "color": "rgba(255,255,255,.5)",
}
`;

exports[`test getTertiaryTextColor returns different versions for light and dark 2`] = `
Object {
  "color": "rgba(0,0,0,.5)",
}
`;

exports[`test nextClasses matches defaults 1`] = `"soft-sides flush text-light-secondary h3 icon-skip-next"`;

exports[`test renders dock version 1`] = `
<button
  className="plain float-right"
  onClick={[Function]}>
  <i
    className="text-center h4 icon-play text-light-primary" />
</button>
`;

exports[`test renders with props 1`] = `
<div
  className="floating audio-controls">
  <button
    className="plain floating__item"
    onClick={[Function]}>
    <i
      className="soft-sides flush text-light-secondary h3 icon-skip-back" />
  </button>
  <button
    className="plain floating__item"
    onClick={[Function]}>
    <i
      className="soft-sides flush text-light-primary h1 icon-play"
      style={
        Object {
          "left": "6px",
          "position": "relative",
        }
      } />
  </button>
  <button
    className="plain floating__item"
    onClick={[Function]}>
    <i
      className="soft-sides flush text-light-secondary h3 icon-skip-next" />
  </button>
  <Connect(AudioScrubberWithoutData)
    isLight={false} />
  <div
    className="grid one-whole flush"
    style={
      Object {
        "maxHeight": "30px",
      }
    }>
    <div
      className="grid__item one-third text-left hard">
      <button
        className="plain floating__item"
        onClick={[Function]}>
        <i
          className="soft-half-right flush h5 icon-shuffle"
          style={
            Object {
              "color": "rgba(255,255,255,.5)",
            }
          } />
      </button>
    </div>
    <div
      className="grid__item one-third hard-ends hard">
      <button
        className="plain floating__item"
        onClick={[Function]}>
        <i
          className="flush h5 icon-repeat"
          style={
            Object {
              "color": "rgba(255,255,255,.5)",
            }
          } />
      </button>
    </div>
    <div
      className="grid__item one-third text-right hard-sides">
      <h5
        onClick={[Function]}
        style={
          Object {
            "color": "rgba(255,255,255,.5)",
          }
        }>
        •••
      </h5>
    </div>
    <i
      className="text-light-primary h3 push-double-left soft-left"
      onClick={[Function]}
      style={
        Object {
          "position": "relative",
          "top": "-38px",
        }
      } />
  </div>
</div>
`;

exports[`test repeatClasses returns defaults 1`] = `"flush h5 icon-repeat"`;

exports[`test repeatIcon returns default icon 1`] = `
<i
  className="text-light-primary h3 push-double-left soft-left"
  onClick={[Function]}
  style={
    Object {
      "position": "relative",
      "top": "-38px",
    }
  } />
`;

exports[`test repeatIcon returns repeat icon 1`] = `
<i
  className="text-light-primary h3 push-double-left soft-left icon-repeat-all"
  onClick={[Function]}
  style={
    Object {
      "position": "relative",
      "top": "-38px",
    }
  } />
`;

exports[`test repeatIcon returns repeat one icon 1`] = `
<i
  className="text-light-primary h3 push-double-left soft-left icon-repeat-one"
  onClick={[Function]}
  style={
    Object {
      "position": "relative",
      "top": "-38px",
    }
  } />
`;

exports[`test repeatIconStyles returns defaults 1`] = `
Object {
  "position": "relative",
  "top": "-38px",
}
`;

exports[`test showControls returns if not series 1`] = `
<div
  className="grid one-whole flush"
  style={
    Object {
      "maxHeight": "30px",
    }
  }>
  <div
    className="grid__item one-third text-left hard">
    <button
      className="plain floating__item"
      onClick={[Function]}>
      <i
        className="soft-half-right flush h5 icon-shuffle"
        style={
          Object {
            "color": "rgba(255,255,255,.5)",
          }
        } />
    </button>
  </div>
  <div
    className="grid__item one-third hard-ends hard">
    <button
      className="plain floating__item"
      onClick={[Function]}>
      <i
        className="flush h5 icon-repeat"
        style={
          Object {
            "color": "rgba(255,255,255,.5)",
          }
        } />
    </button>
  </div>
  <div
    className="grid__item one-third text-right hard-sides">
    <h5
      onClick={[Function]}
      style={
        Object {
          "color": "rgba(255,255,255,.5)",
        }
      }>
      •••
    </h5>
  </div>
  <i
    className="text-light-primary h3 push-double-left soft-left"
    onClick={[Function]}
    style={
      Object {
        "position": "relative",
        "top": "-38px",
      }
    } />
</div>
`;

exports[`test shuffleClasses returns defaults 1`] = `"soft-half-right flush h5 icon-shuffle"`;

exports[`test toggleClasses matches defaults 1`] = `"soft-sides flush text-light-primary h1 "`;

exports[`toggleClasses matches defaults 1`] = `"soft-sides flush text-light-primary h1 "`;
